--- a/website/src/layouts/BaseLayout.astro
+++ b/website/src/layouts/BaseLayout.astro
@@ -82,7 +82,7 @@ const {
 </html>
 
 <style>
-    :global(.navigation) {
+    :global(html .navigation) {
         position: fixed;
         top: 0;
         left: 0;
