add sidebar categories, selfhost fonts

--- a/website/src/layouts/BaseLayout.astro
+++ b/website/src/layouts/BaseLayout.astro
@@ -32,7 +32,7 @@ const {
         <link rel="alternate icon" type="image/x-icon" href="/favicon.png" />
 
         <!-- Preload Fonts -->
-        <link rel="preload" href="/fonts/Manrope[wght].woff2" as="font" crossorigin="anonymous">
+        <link rel="preload" href="/fonts/SofiaSans-VariableFont_wght.woff2" as="font" crossorigin="anonymous">
 
         <title>{title}</title>
 
