--- a/website/src/styles/main.css
+++ b/website/src/styles/main.css
@@ -1,12 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@400;500;600;700;800&display=swap');
-
-/* @font-face {
-	font-family: "Manrope";
-	font-weight: 100 900;
+@font-face {
+	font-family: 'Sofia Sans';
 	font-style: normal;
-	font-display: swap;
-	src: url("/fonts/Manrope[wght].woff2") format("woff2");
-} */
+	font-weight: 100 900;
+	src: url(/fonts/SofiaSans-VariableFont_wght.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
 :root,
 dialog {
