use chord length for estimating Δfwd

--- a/website/src/layouts/BaseLayout.astro
+++ b/website/src/layouts/BaseLayout.astro
@@ -59,7 +59,7 @@ const {
         <Navigation title="taolib">
             <NavigationItem href="/docs">Docs</NavigationItem>
             <NavigationItem href="/api/index.html">API</NavigationItem>
-            <!-- <NavigationItem href="/planner">Path Planner</NavigationItem> -->
+            <NavigationItem href="/planner">Path Planner</NavigationItem>
             <Fragment slot="actions">
                 <li>
                     <Button
