--- a/website/src/layouts/BaseLayout.astro
+++ b/website/src/layouts/BaseLayout.astro
@@ -10,12 +10,10 @@ import { GITHUB_URL } from "~/config";
 import "~/styles/main.css";
 
 const {
-    name = "Kernel",
-    image = "/kernel-banner.png",
-    imageAlt = "Kernel Banner",
-    title = "",
+    name = "taolib",
+    title = "taolib",
     type = "website",
-    description = ""
+    description = "A library for creating complex autonomous routines on VEX V5."
 } = Astro.props;
 ---
 
@@ -40,16 +38,16 @@ const {
         <meta property="og:title" content={title} />
         <meta property="og:type" content={type} />
         <meta property="og:url" content={Astro.url} />
-        <meta property="og:image" content={image} />
+        <!-- <meta property="og:image" content={image} />
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="1200" />
         <meta property="og:image:height" content="630" />
         <meta property="og:image:alt" content={imageAlt} />
-        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:card" content="summary_large_image"> -->
         <meta name="description" property="og:description" content={description} />
 
         <meta name="color-scheme" content="dark" />
-        <meta name="theme-color" content="#9b817d" />
+        <meta name="theme-color" content="#98aaec" />
 
         <slot name="head" />
     </head>
