--- a/website/src/layouts/DocsLayout.astro
+++ b/website/src/layouts/DocsLayout.astro
@@ -20,12 +20,11 @@ const categories = categorize(await Astro.glob("../pages/docs/**.md"), page => p
 							<svg data-hk="0-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16" class="astro-XIML7APE "><path d="M4.427 7.427l3.396 3.396a.25.25 0 00.354 0l3.396-3.396A.25.25 0 0011.396 7H4.604a.25.25 0 00-.177.427z"></path></svg>
 						</summary>
 						{categories[category].sort((a, b) => (a.frontmatter.page - b.frontmatter.page)).map(page => {
-							const currentPage = "/" + (new URL(Astro.request.url).pathname.split("/docs/")[1] || "");
+							const currentPage = "/" + (new URL(Astro.request.url).pathname.split("/docs/")[1] || "").split("/")[0];
 							const path = page.url.split("/docs")[1] || "/";
 
 							return (
 								<li class="docs-sidebar-item" class:list={[{ selected: currentPage === path}]}>
-									{currentPage}
 									<a href={page.url}>
 										{page.frontmatter.title}
 									</a>
